 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.5 Changelog

6.5.0 Beta 2.1
=============

* [cdunde]: To setup red rectangle selection support in the Model Editor for the 3D views using MMB+RMB
          - for vertex selection in those views.
          - Also setup Linear Handle functions for multiple vertex selection movement using same.

* [DanielPharos]: Added a simple update-notifier: it just checks the age of the QuArK release.
          - Added /NOSPLASH and /NOUPDATE to the commandline.

* [cdunde]: Changed to only allow model component frames to cause handles to be drawn, as should be the case.

* [cdunde]: To allow individual model mesh vertex movement for multiple frames of the same model component
          - to work in conjunction with the new Linear Handle functions capable of doing the same.

* [cdunde]: Model Editor, stop error if object is moved back to where it started from at beginning of a linear drag.
          - Also added a 'rotationspeed' control to the 'UserRotationMatrix' function.
          - To allow all Linear drag handle hints to show in the 'Help' box when dragging.

* [cdunde]: Setup variable setting for Model Editor 'Linear Handle (size) Setting'
          - and 'Rotation Speed' using the 'cfg' button on the movement toolbar.

* [cdunde]: Added ModelEditorLinHandlesManager class and its related classes to the mdlhandles.py file
          - to use for editing movement of model faces, vertexes and bones (in the future).

* [DanielPharos]: Fixed the infobase-help not opening on several browsers.

* [DanielPharos/cdunde]: Fixed the 'cut out corner' function broken in Beta 1.

* [cdunde/DanielPharos]: To setup selected model mesh faces so they will draw correctly in all views.
